fixed android device overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,12 @@ body {
     overflow: hidden;
 }
 
+.hamburger {
+    padding-right:0;
+}
+
 #top-wrapper {
+    display: relative;
     height: 100vh;
     width: 100vw;
     overflow: hidden;
@@ -94,7 +99,9 @@ nav {
 
 .nav-logo {
     font-family: 'Architects Daughter', cursive;
-    font-size: 2em
+    font-size: 2em;
+    padding: 0;
+    margin: 0;
 }
 
 .nav-logo span {
@@ -126,7 +133,7 @@ nav {
     top: 0;
     width: 100%;
     height: 100%;
-    background-image: url("../img/hero.png");
+    background-image: url("../img/hero.jpg");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
@@ -264,7 +271,11 @@ the css applies to. */
         display:block;
     }
 
-    #side-nav-content {
+    section {
+        left: 50%;
+        margin-left: -40%;
+        height:100%;
+        width: 80%;
     }
 }
 
